# ibex-lib

./: .buildinfo  .gitignore  .travis.yml  BiasProfilTree.txt  CMakeLists.txt  Doxyfile  README.md  appveyor.yml  common.mak  constraint.html  contractor.html  deliv-makefile  dev-misc.html  example-slam.html  filib_CMakeLists.txt.in  filib_config.h.in  flex.py  function.html  genindex.html  ibex.pc.in  ibex_NodeType.h  ibex_SetBisect.cpp  ibex_SetInterval.cpp  ibex_SetInterval.h  ibex_SetLeaf.h  ibex_SetNode.h  ibexutils.py  index.html  install-cmake.html  install.html  interval.html  intro.html  java-install.html  lab.html  makefile  minibex.html  objects.inv  optim-prog.html  optim.html  out  (+16 more)
cmake.install/: CMakeLists.txt
examples/: CMakeLists.txt  TestHeap.cpp  abstaylor.cpp  arith01.cpp  arith02.cpp  arith03.cpp  basic01.cpp  bugaffine2.cpp  bugaffine3.cpp  check_itv.cpp  ctc01.cpp  ctc02.cpp  defaultoptimizer.cpp  defaultoptimizerbs.cpp  defaultsolver.cpp  doc-arithmetic.cpp  doc-arithmetic.txt  doc-contractor.cpp  doc-contractor.txt  doc-covfiles.cpp  doc-covfiles.txt  doc-modeling.cpp  doc-modeling.txt  doc-optim.cpp  doc-optim.txt  doc-separator.cpp  doc-separator.txt  doc-set.cpp  doc-set.txt  doc-sivia.cpp  doc-solver.cpp  doc-solver.txt  doc-strategy.cpp  doc-tutorial.cpp  ex04.cpp  ex04_1.cpp  ex04_2.cpp  ex04_3.cpp  ex04_opti.cpp  ex_avion.cpp  (+49 more)
examples/estimparam/: #res-sampsonaff-epsobj1-prec005-prof60#  #res-sampsonaff-epsobj2-prec005-prof60#  #res-sampsonaff-epsobj3-prec001-prof60#  AFAIRE  README  USACtest5.txt  USACtest5_rescaled.txt  algorithm2e-cgf.sty  algorithm2e.sty  essential.cpp  essential_ransac.cpp  essential_test2.txt  essentialmat.cpp  essentialmatrix.txt  essentiel3-prec001  estim0.cpp  estim_circle  estim_circle.cpp  estim_circle1.cpp  estim_circle_optim.cpp  estim_essentialmat.cpp  estim_essentialmataff.cpp  estim_essentialmatalgeb.cpp  estim_essentialmatmohc.cpp  estim_essentialmatnorm  estim_essentialmatnorm.cpp  estim_essentialmatnorm_nooracle.cpp  estim_essentialmatnorm_searchstrategy.cpp  estim_essentialmatnorm_searchstrategy_oracle.cpp  estim_essentialmatsampson  estim_essentialmatsampson.cpp  estim_essentialmatsampsonaff  estim_essentialmatsampsonaff.cpp  estim_essentialmatsampsonaff1.cpp  estim_essentialmatsampsonaff2.cpp  estim_essentialmatsampsonfwdbwd.cpp  estim_essentialmatsampsonog.cpp  estim_fund_sampson.cpp  estim_fund_sampson_decal.cpp  estim_fund_sampson_diff.cpp  (+87 more)
examples/lab/: lab1.cpp  vibes.cpp
examples/resultats/: optim-serie1-acidhc4  optim-serie1-acidhc4-newmaster-sr1  optim-serie1-acidhc4-sr1  optim-serie1-acidhc4-sr10  optim-serie2-acidhc4--compo  optim-serie2-acidhc4--compo--ublb50sr10  optim-serie2-acidhc4-v857-compo  optim-serie2-v2-acidhc4--compo  optim-v2-serie1-acidhc4  optim-v2-serie1-acidhc4-sr10
examples/slam/: data.cpp  data.h  makefile  slam1.cpp  slam2.cpp  slam2_tmp.cpp  slam3.cpp
interval_lib_wrapper/: CMakeLists.txt  wscript
interval_lib_wrapper/bias/: ibex_IntervalLibWrapper.h  ibex_IntervalLibWrapper.inl  wscript
interval_lib_wrapper/direct/: CMakeLists.txt  ibex_IntervalLibWrapper.cpp  ibex_IntervalLibWrapper.h  ibex_IntervalLibWrapper.inl  wscript
interval_lib_wrapper/filib/: CMakeLists.txt  FindFilib.cmake  ibex_IntervalLibWrapper.cpp  ibex_IntervalLibWrapper.h  ibex_IntervalLibWrapper.inl  wscript
interval_lib_wrapper/gaol/: CMakeLists.txt  FindGaol.cmake  FindMathlib.cmake  ibex_IntervalLibWrapper.cpp  ibex_IntervalLibWrapper.h  ibex_IntervalLibWrapper.inl
lp_lib_wrapper/: CMakeLists.txt  wscript
lp_lib_wrapper/clp/: CMakeLists.txt  FindClp.cmake  ibex_LPLibWrapper.cpp  ibex_LPLibWrapper.h  ibex_LPWrapper.cpp_  wscript
lp_lib_wrapper/cplex/: ibex_LPLibWrapper.cpp  ibex_LPLibWrapper.h  wscript
lp_lib_wrapper/none/: CMakeLists.txt  ibex_LPLibWrapper.cpp  ibex_LPLibWrapper.h  ibex_LPWrapper.cpp_  wscript
lp_lib_wrapper/soplex/: CMakeLists.txt  FindSoPlex.cmake  ibex_LPLibWrapper.cpp  ibex_LPLibWrapper.cpp_  ibex_LPLibWrapper.h  ibex_LPLibWrapper2.cpp  ibex_LPWrapper.cpp_  wscript
plugins/ensta-robotics/: CMakeLists.txt  wscript
src/: CMakeLists.txt  Doxyfile  Ibex3BCID.cpp  Ibex3BCID.h  IbexACID.cpp  IbexACID.h  IbexAdjacency.cpp  IbexAdjacency.h  IbexAffine.cpp  IbexAffine.h  IbexAffineSimplex.cpp  IbexAffineSimplex.h  IbexBisection.cpp  IbexBisection.h  IbexBisector.cpp  IbexBisector.h  IbexBlockSet.cpp  IbexBlockSet.h  IbexBox.cpp  IbexBox.h  IbexBoxNarrow.cpp  IbexBoxNarrow.h  IbexCSP.cpp  IbexCSP.h  IbexCell.cpp  IbexCell.h  IbexCellBuffer.h  IbexCellHeap.cpp  IbexCellHeap.h  IbexCellStack.cpp  IbexCellStack.h  IbexCertification.cpp  IbexCertification.h  IbexConstraint.cpp  IbexConstraint.h  IbexContractor.cpp  IbexContractor.h  IbexContractorList.cpp  IbexContractorList.h  IbexDomain.cpp  (+86 more)
src/arithmetic/: CMakeLists.txt  ibex_Affine.h  ibex_Affine.h_  ibex_Affine2.cpp  ibex_Affine2.cpp_  ibex_Affine2.h  ibex_Affine2.h_  ibex_Affine2Domain.cpp  ibex_Affine2Domain.h  ibex_Affine2Matrix.cpp  ibex_Affine2Matrix.h  ibex_Affine2Matrix.h_  ibex_Affine2MatrixArray.cpp  ibex_Affine2MatrixArray.h  ibex_Affine2Vector.cpp  ibex_Affine2Vector.h  ibex_Affine2Vector.h_  ibex_Affine2_No.cpp  ibex_Affine2_No.cpp_  ibex_Affine2_No.h  ibex_Affine2_fAF1.cpp  ibex_Affine2_fAF1.cpp_  ibex_Affine2_fAF1.h  ibex_Affine2_fAF2.cpp  ibex_Affine2_fAF2.cpp_  ibex_Affine2_fAF2.h  ibex_Affine2_fAF2_fma.cpp  ibex_Affine2_fAF2_fma.h  ibex_Affine2_fAFFullI.cpp  (+81 more)
tests/: CMakeLists.txt  CMakeLists.txt.orig  ExFunction.cpp  ExFunction.h  Instance.cpp  Instance.h  Ponts30.cpp  Ponts30.h  TestAffine.cpp  TestAffine.h  TestAffine.h_  TestAffine2.cpp  TestAffine2.h  TestAffine2.h_  TestAgenda.cpp  TestAgenda.h  TestArith.cpp  TestArith.h  TestBitSet.cpp  TestBitSet.h  TestBoolInterval.cpp  TestBoolInterval.h  TestBxpSystemCache.cpp  TestBxpSystemCache.h  TestCell.cpp  TestCell.h  TestCellHeap.cpp  TestCellHeap.h  TestCov.cpp  TestCov.h  TestCross.cpp  TestCross.h  TestCtcExist.cpp  TestCtcExist.h  TestCtcForAll.cpp  TestCtcForAll.h  TestCtcFritzJohn.cpp  TestCtcFritzJohn.h  TestCtcFwdBwd.cpp  TestCtcFwdBwd.h  (+154 more)
(+3684 files in other folders)
